--- a/cm2-assessment01-group08.rmd
+++ b/cm2-assessment01-group08.rmd
@@ -362,12 +362,13 @@ and variance of
 As expected, these are very similar to the theoretical values of 0.06 and 0.0244
 calculated in \@ref(qthreePtA).
 
-## Calculate the shortfall probabilities for asset 1, assuming a benchmark return of
-
 <!-- # ============================================================================== -->
 <!-- # Q3(C)  Calculate the shortfall probabilities for asset 1
 <!-- # ============================================================================== -->
 
+## Calculate the shortfall probabilities for asset 1, assuming a benchmark return of
+
+_[2 marks]_
 
 \begin{array}{ll}
 \hline
@@ -399,9 +400,8 @@ prob_val2 <- pnorm(-0.1, mean = 0.06, sd = 0.156205)
 <!-- # Q3(C)(i)  benchmark 0%
 <!-- # ============================================================================== -->
 
-### 0%,
- benchmark =0%
-
+### benchmark = 0%,
+ 
 \begin{aligned}
 \mathbb{P}[R_1 < 0] 
 &= \int_{-\infty}^{0} f_R(x)\mathrm{d}x \\
@@ -422,9 +422,7 @@ prob_val2 <- pnorm(-0.1, mean = 0.06, sd = 0.156205)
 <!-- # Q3(C)(ii)  benchmark -10%
 <!-- # ============================================================================== -->
 
-### -10%.
-
-benchmark = -10%
+### benchmark = -10%.
 
 \begin{aligned}
 \mathbb{P}[R_1 < -0.1] 
@@ -442,14 +440,13 @@ benchmark = -10%
 \end{array}
 \]
 
-_[2 marks]_
-
-## Repeat part Q3c above for asset 2.
-
 <!-- # ============================================================================== -->
 <!-- # Q3(d)  Calculate the shortfall probabilities for asset 2
 <!-- # ============================================================================== -->
 
+## Repeat part Q3c above for asset 2.
+
+_[4 marks]_
 
 \begin{array}{ll}
 \hline
@@ -472,8 +469,7 @@ X\mid Z =2 &\sim \mathcal{N}(\mu=0.3, \, \sigma^{2}=0.1^{2}) \quad \text{w.p. } 
 <!-- # Q3(d)(i)  benchmark 0%
 <!-- # ============================================================================== -->
 
-### 0%,
- benchmark =0%
+### benchmark = 0%,
 
 \[
 \begin{aligned}
@@ -498,12 +494,12 @@ X\mid Z =2 &\sim \mathcal{N}(\mu=0.3, \, \sigma^{2}=0.1^{2}) \quad \text{w.p. } 
 <!-- # Q3(d)(ii)  benchmark -10%
 <!-- # ============================================================================== -->
 
-### -10%,
- benchmark =0%
+### benchmark = -10%,
+ benchmark =-10%
 
 \[
 \begin{aligned}
-\mathbb{P}[R_2 < 0] 
+\mathbb{P}[R_2 < -0.1] 
 &= 0.8 \int_{-\infty}^{-0.1} f_{\mathcal{N}(0,\,0.1^2)}(x)\, \mathrm{d}x
 + 0.2 \int_{-\infty}^{-0.1} f_{\mathcal{N}(0.3,\,0.1^2)}(x)\, \mathrm{d}x \\
 &= 0.8 \times \Phi\!\left( \frac{-0.1 - 0}{0.1} \right) + 0.2 \times \Phi\!\left( \frac{-0.1 - 0.3}{0.1} \right) \\
@@ -519,19 +515,128 @@ X\mid Z =2 &\sim \mathcal{N}(\mu=0.3, \, \sigma^{2}=0.1^{2}) \quad \text{w.p. } 
 \hline
 \end{array}
 \]
-_[4 marks]_
+
+
+<!-- # ============================================================================== -->
+<!-- # Q3(e)  Plot pdfs of returns for assets 1 and 2 on the same axes
+<!-- # ============================================================================== -->
 
 ## Use **R** to plot the probability density functions of returns for assets 1 and 2 on the same axes.
-
 _[3 marks]_
 
-## Use **R** to plot the cumulative density functions of returns for assets 1 and 2 on the same axes.
+The plotting range $[-0.5, 0.6]$ was selected based on definite outlier. 
+For Asset1, $R_1 \sim \mathcal{N}(0.06, 0.0244)$ with standard deviation $\sigma_1 = \sqrt{0.0244} \approx 0.156205$, giving a three-sigma inverval of $0.06 \pm 3\times\sigma_1 \approx [-0.41, 0.53]$.
+For asset 2, the two normal components have means 0 and 0.3 with standard deviation 0.1, resulting in three-sigma intervals of $[-0.3, 0.3]$ and $[0.0, 0.6]$ , respectively.
+The selected range $[-0.5, 0.6]$ therefore covers approximately three standard deviations for both assets.
 
+
+```{r}
+x <- seq(-0.5, 0.6, by = 0.001)
+R1_pdf <- dnorm(x, mean = 0.06, sd = sqrt(0.0244))
+R2_pdf <- 0.8 * dnorm(x, mean = 0, sd = 0.1) + 0.2 * dnorm(x, mean = 0.3, sd = 0.1) 
+
+ymax <- max(R1_pdf, R2_pdf)
+plot(
+  x,
+  R1_pdf,
+  type = "l",
+  col = "red",
+  lwd = 2,
+  ylim = c(0, ymax),
+  xlab = "Return",
+  ylab = "Density",
+  main = "Probability density functions of returns for assets 1 and 2"
+)
+grid()
+lines(x, R2_pdf, type="l", lwd =2, col = "blue")
+
+legend(
+  "topright",
+  legend = c("R1_PDF", "R2_PDF"),
+  col = c("red", "blue"),
+  lty = c(1, 1),
+  lwd = 2,
+  bty = "n"
+)
+
+plot(
+  x,
+  R2_pdf - R1_pdf,
+  type = "l",
+  lwd = 2,
+  col="green",
+  xlab = "Return",
+  ylab = "PDF difference (R2 − R1)",
+  main = "Difference between PDFs"
+)
+abline(h = 0, lty = 2)
+grid()
+
+```
+
+
+
+<!-- # ============================================================================== -->
+<!-- # Q3(f) plot the cdfs of returns for assets 1 and 2 on the same axes.
+<!-- # ============================================================================== -->
+
+## Use **R** to plot the cumulative density functions of returns for assets 1 and 2 on the same axes.
 _[2 marks]_
 
-## Based on your answers to parts Q3a–Q3f above, comment on the risk involved in asset 2, compared to asset 1.
+```{r}
 
+R1_cdf <- pnorm(x, mean = 0.06, sd = sqrt(0.0244))
+R2_cdf <- 0.8 * pnorm(x, mean = 0, sd = 0.1) + 0.2 * pnorm(x, mean = 0.3, sd = 0.1) 
+
+ymax_cdf <- max(R1_cdf, R2_cdf)
+plot(
+  x,
+  R1_cdf,
+  type = "l",
+  col = "red",
+  lwd = 2,
+  ylim = c(0, ymax_cdf),
+  xlab = "Return",
+  ylab = "CDF",
+  main = "Cumulative density functions of returns for assets 1 and 2"
+)
+grid()
+lines(x, R2_cdf, type="l", lwd =2, col = "blue")
+
+legend(
+  "topright",
+  legend = c("R1_CDF", "R2_CDF"),
+  col = c("red", "blue"),
+  lty = c(1, 1),
+  lwd = 2,
+  bty = "n"
+)
+
+plot(
+  x,
+  R2_cdf - R1_cdf,
+  type = "l",
+  lwd = 2,
+  col="green",
+  xlab = "Return",
+  ylab = "CDF difference (R2 − R1)",
+  main = "Difference between CDFs"
+)
+abline(h = 0, lty = 2)
+grid()
+
+```
+
+
+
+<!-- # ============================================================================== -->
+<!-- # Q3(g)  comment on the risk involved in asset 2, compared to asset 1
+<!-- # ============================================================================== -->
+
+## Based on your answers to parts Q3a–Q3f above, comment on the risk involved in asset 2, compared to asset 1.
 _[4 marks]_
+
+ Based on the results from $Q3(a)$ to $Q3(f)$, asset 2 appears to be riskier than asset1, even though their expected returns are similar. Asset 1 follows a single normal distribution, so its returns are more stable and predictable. In contrast, asset 2 is a mixture of two normal distributions, which adds more uncertainty. The shortfall probabilities also indicate that asset 2 has a higer of risk of extreme outliers. This can be seen in the PDF, where asset 2 shows a more irregular shape and heavier tails. The CDF also indicates that asset 2 has a higer of risk of extreme outcomes. 
 
 - pdf : Show all final numerical answers in **bold**. Include all working. Paste
   the plots. Write your answer to part Q3g on no more than 5 lines.
